@@ -1,10 +1,12 @@
 AC_INIT(fuse/obexfs.c)
-AM_INIT_AUTOMAKE(obexfs, 0.4)
+AM_INIT_AUTOMAKE(obexfs, 0.5)
 AM_CONFIG_HEADER(config.h)
 
 AC_PROG_CC
 AC_PROG_RANLIB
 AC_PROG_INSTALL
+
+AM_PATH_OPENOBEX(1.0.0)
 
 CFLAGS="-Wall -W -Wmissing-declarations -Wmissing-prototypes"
 CFLAGS="$CFLAGS -O2 -D_FILE_OFFSET_BITS=64"
