@@ -1,9 +1,12 @@
 ## Process this file with automake to produce Makefile.in
 
 LDADD =				-lfuse -lpthread \
-				-lopenobex -lbluetooth \
+				@OPENOBEX_LIBS@ \
+				-lbluetooth \
 				-lobexftp -lcobexbfb -lbfb
 
 obexfs_SOURCES =		obexfs.c
 
-bin_PROGRAMS =			obexfs
+obexautofs_SOURCES =		obexautofs.c
+
+bin_PROGRAMS =			obexfs obexautofs
