@@ -1,0 +1,1 @@
+Be sure to try the new auto scanning obexautofs.
